--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,13 @@
-
 ############# Database Properties ###########################################
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring-reddit-clone?allowPublicKeyRetrieval=true&useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
+spring.datasource.url=jdbc:mysql://root:root@localhost:3306/amar
 spring.datasource.username=root
-spring.datasource.password=mysql
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+spring.datasource.password=root
 ############# Mail Properties ###########################################
-spring.mail.host=smtp.mailtrap.io
+spring.mail.host=sandbox.smtp.mailtrap.io
 spring.mail.port=25
-spring.mail.username=8d2a71401e367a
-spring.mail.password=91314f6d3cf186
+spring.mail.username=95a8d0dfae3456
+spring.mail.password=9b73c442371fbe
 spring.mail.protocol=smtp
 ############ JWT Properties #####################
 jwt.expiration.time=900000
